--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-        <link rel="icon" href="galaxy.png" />
+        <link rel="icon" href="../public/favicon.ico" />
         <script src="index.js" defer></script>
         <title>Space Photos</title>
     </head>
@@ -14,6 +14,6 @@
     <body>
         <div id="root"></div>
     </body>
-    
+
 </html>
 
